Finished CH2 (Iorveth)

--- a/changelog.html
+++ b/changelog.html
@@ -9,19 +9,22 @@ nav_exclude: true
 <header>
 <h1>Changelog</h1>
 </header>
+<p class="changelog"><strong>05-Jul-2021</strong> - Completed Chapter II (Iorveth)
+   <br>Completed Chapter II (Iorveth) sidequests; finished plaintext draft of character dialogue
+   <br>Continuing to find and fix typos in the other chapters</p>
 <p class="changelog"><strong>02-Jul-2021</strong> - Completed Chapter III (Roche)
-   <br>Completed Epilogue (Roche); currently separated out from the unfinished "Epilogue (Iorveth)", may put them back into one page eventually
+   <br>Completed Epilogue (Roche); currently separated out from the unfinished "Epilogue (Iorveth)", may put them back into one page eventually</p>
 <p class="changelog"><strong>30-Jun-2021</strong> - Added Chapter III (Roche) quests up to the <em>Summit of Mages</em> (missing the Anais rescue, final dragon fight)
-      <br>Added final Letho conversation to Epilogue (missing: other epilogue quests for Roche & Iorveth's paths)
+      <br>Added final Letho conversation to Epilogue (missing: other epilogue quests for Roche & Iorveth's paths)</p>
 <p class="changelog"><strong>29-Mar-2021</strong> - Completed Chapter II (Roche) main quests
-      <br>Completed Chapter II (Roche) character dialogue
+      <br>Completed Chapter II (Roche) character dialogue</p>
 <p class="changelog"><strong>28-Mar-2021</strong> - Completed Chapter II (Roche) sidequests
       <br>Added <em>Woe Unto the Vanquished</em> conclusion to the Chapter I sidequests
       <br>Completed Chapter I Character Dialogue
-      <br>Added additional hanging dialogue to Chapter I
+      <br>Added additional hanging dialogue to Chapter I</p>
 <p class="changelog"><strong>17-Mar-2021</strong> - First draft of Chapter I complete (still need: sneaky version of Stringing Up Sods)
       <br>Finished Chapter I overheard dialogue
-      <br>Added Ves and various minor NPCs to Chapter I character dialogue (doublecheck: aggravating guards in town)
+      <br>Added Ves and various minor NPCs to Chapter I character dialogue (doublecheck: aggravating guards in town)</p>
 <p class="changelog"><strong>15-Mar-2021</strong> - Finished Chapter I sidequests
       <br>Added first draft of Chapter I character dialogue (still need: Ves, minor NPCs. Figure out way to incorporated deleted Wild Hunt dialogue)
       <br>Completed text document version of Chapter I up to 3.15.01</p>
