--- a/prologue.html
+++ b/prologue.html
@@ -2502,7 +2502,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 <div class="stage">[If Aryan died: Character ending animatic cutscene plays.
    <div class="narbreak">&nbsp;</div>
-   NARRATOR: War is a good time to forge friendships, alliances. Aryan La
+   GERALT, NARRATING: War is a good time to forge friendships, alliances. Aryan La
       Valette, busy building walls and forging swords, forgot that. When he
       was gone, those he loved were forced to forge friendships with those he
       hated.
@@ -2511,7 +2511,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 If Aryan lived: Character ending animatic cutscene plays.
 <div class="narbreak">&nbsp;</div>
 
-   NARRATOR: Honor's a curious thing. Honor made Aryan fight a mismatched
+   GERALT, NARRATING: Honor's a curious thing. Honor made Aryan fight a mismatched
       battle against the might of Temeria. Facing defeat, honor told Aryan to
       bow his neck to save his men. But that same honor prevented him from
       saving himself.]</div>
